added new description to class

--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -219,6 +219,14 @@
     "    def __len__(self): \n",
     "        return len(self.x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note that in the __init__ method, we have converted the input into a floating-point number and have also flattened each image into 28*28 = 784 numeric values (where each numeric value corresponds to a pixel value). We are also specifying the number of data points in the __len__ method; here, it is the length of x. The __getitem__ method contains logic for what should be returned when we ask for thee ixth data points (ix will be an integer between 0 and __len__).\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
