added new models

--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -227,6 +227,32 @@
     "### Note that in the __init__ method, we have converted the input into a floating-point number and have also flattened each image into 28*28 = 784 numeric values (where each numeric value corresponds to a pixel value). We are also specifying the number of data points in the __len__ method; here, it is the length of x. The __getitem__ method contains logic for what should be returned when we ask for thee ixth data points (ix will be an integer between 0 and __len__).\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data(): \n",
+    "    train = FMNISTDataset(tr_images, tr_targets) \n",
+    "    trn_dl = DataLoader(train, batch_size=32, shuffle=True)\n",
+    "    return trn_dl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In the preceding lines of code, we created an object of the FMNISTDataset class named train and invoked the DataLoader so that it fetched 32 data points at random to return the training DataLoader; that is, trn_dl."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
