--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -249,10 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.optim import SGD\n",
+    "def get_model():\n",
+    "    model = nn.Sequential(\n",
+    "                nn.Linear(28 * 28, 1000),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Linear(1000, 10)\n",
+    "            ).to(device)\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    optimizer = SGD(model.parameters(), lr=1e-2)\n",
+    "    return model, loss_fn, optimizer"
+   ]
   }
  ],
  "metadata": {
