--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -273,9 +273,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def train_batch(x, y, model, opt, loss_fn):\n",
+    "    model.train() # <- let's hold on to this until we reach \n",
+    "    # dropout section\n",
+    "    # call your model like any python function on your batch \n",
+    "    # of inputs\n",
+    "    prediction = model(x)\n",
+    "    # compute loss\n",
+    "    batch_loss = loss_fn(prediction, y)\n",
+    "    # based on the forward pass in `model(x)` compute all the \n",
+    "    # gradients of 'model.parameters()'\n",
+    "    batch_loss.backward()\n",
+    "    # apply new-weights = f(old-weights, old-weight-gradients) \n",
+    "    # where \"f\" is the optimizer\n",
+    "    opt.step()\n",
+    "    # Flush gradients memory for next batch of calculations\n",
+    "    opt.zero_grad()\n",
+    "    return batch_loss.item()"
+   ]
   }
  ],
  "metadata": {
