added new models

--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -306,6 +306,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# since there's no need for updating weights, \n",
+    "# we might as well not compute the gradients.\n",
+    "# Using this '@' decorator on top of functions \n",
+    "# will disable gradient computation in the entire function\n",
+    "@torch.no_grad()\n",
+    "def accuracy(x, y, model):\n",
+    "    model.eval() # <- let's wait till we get to dropout \n",
+    "    # section\n",
+    "    # get the prediction matrix for a tensor of `x` images\n",
+    "    prediction = model(x)\n",
+    "    # compute if the location of maximum in each row \n",
+    "    # coincides with ground truth\n",
+    "    max_values, argmaxes = prediction.max(-1)\n",
+    "    is_correct = argmaxes == y\n",
+    "    return is_correct.cpu().numpy().tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In the preceding lines of code, we are explicitly mentioning that we don't need to calculate the gradient by providing @torch.no_grad() and calculating the prediction values by feed-forwarding input through the model.\n",
+    "\n",
+    "### Next, we invoke prediction.max(-1) to identify the argmax index corresponding to each row.\n",
+    "\n",
+    "### Furthermore, we are comparing our argmaxes with the ground truth through argmaxes == y so that we can check whether each row is predicted correctly. Finally, we are returning the list of is_correct objects after moving it to a CPU and converting it into a numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
