added new models

--- a/Pytorch/pytorch.ipynb
+++ b/Pytorch/pytorch.ipynb
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the model, loss, optimizer, and DataLoaders:"
+    "## Initialize the model, loss, optimizer, and DataLoaders"
    ]
   },
   {
