--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -9,6 +9,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import datasets\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "import numpy as np\n",
+    "data_folder = '~/data/FMNIST' # This can be any directory you \n",
+    "# want to download FMNIST to\n",
+    "fmnist = datasets.FashionMNIST(data_folder, download=True, \\\n",
+    "                                    train=True)\n",
+    "tr_images = fmnist.data\n",
+    "tr_targets = fmnist.targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FMNISTDataset(Dataset):\n",
+    "    def __init__(self, x, y):\n",
+    "        x = x.float()/255\n",
+    "        x = x.view(-1,28*28)\n",
+    "        self.x, self.y = x, y \n",
+    "    def __getitem__(self, ix):\n",
+    "        x, y = self.x[ix], self.y[ix] \n",
+    "        return x.to(device), y.to(device)\n",
+    "    def __len__(self): \n",
+    "        return len(self.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data(): \n",
+    "    train = FMNISTDataset(tr_images, tr_targets) \n",
+    "    trn_dl = DataLoader(train, batch_size=32, shuffle=True)\n",
+    "    return trn_dl"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -22,7 +72,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
