added new models

--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -59,6 +59,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.optim import SGD\n",
+    "def get_model():\n",
+    "    model = nn.Sequential(\n",
+    "                nn.Linear(28 * 28, 1000),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Linear(1000, 10)\n",
+    "            ).to(device)\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    optimizer = SGD(model.parameters(), lr=1e-2)\n",
+    "    return model, loss_fn, optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_batch(x, y, model, opt, loss_fn):\n",
+    "    model.train()\n",
+    "    # call your model like any python function on your batch \n",
+    "    # of inputs\n",
+    "    prediction = model(x)\n",
+    "    # compute loss\n",
+    "    batch_loss = loss_fn(prediction, y)\n",
+    "    # based on the forward pass in `model(x)` compute all the \n",
+    "    # gradients of 'model.parameters()'\n",
+    "    batch_loss.backward()\n",
+    "    # apply new-weights = f(old-weights, old-weight-gradients) \n",
+    "    # where \"f\" is the optimizer\n",
+    "    opt.step()\n",
+    "    # Flush memory for next batch of calculations\n",
+    "    opt.zero_grad()\n",
+    "    return batch_loss.item()\n",
+    "@torch.no_grad()\n",
+    "def accuracy(x, y, model):\n",
+    "    model.eval()   \n",
+    "    # get the prediction matrix for a tensor of `x` images\n",
+    "    prediction = model(x)\n",
+    "    # compute if the location of maximum in each row \n",
+    "    # coincides with ground truth\n",
+    "    max_values, argmaxes = prediction.max(-1)\n",
+    "    is_correct = argmaxes == y\n",
+    "    return is_correct.cpu().numpy().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "trn_dl = get_data()\n",
+    "model, loss_fn, optimizer = get_model()\n",
+    "losses, accuracies = [], []\n",
+    "for epoch in range(5):\n",
+    "    print(epoch)\n",
+    "    epoch_losses, epoch_accuracies = [], []\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        batch_loss = train_batch(x, y, model, optimizer, \n",
+    "                                        loss_fn)\n",
+    "        epoch_losses.append(batch_loss)\n",
+    "    epoch_loss = np.array(epoch_losses).mean()\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        is_correct = accuracy(x, y, model)\n",
+    "        epoch_accuracies.extend(is_correct)\n",
+    "    epoch_accuracy = np.mean(epoch_accuracies)\n",
+    "    losses.append(epoch_loss)\n",
+    "    accuracies.append(epoch_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
