--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torchvision import datasets\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torch\n",
+    "import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "import numpy as np\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +120,7 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "1\n"
      ]
     }
    ],
@@ -145,7 +143,19 @@
     "        epoch_accuracies.extend(is_correct)\n",
     "    epoch_accuracy = np.mean(epoch_accuracies)\n",
     "    losses.append(epoch_loss)\n",
-    "    accuracies.append(epoch_accuracy)"
+    "    accuracies.append(epoch_accuracy)\n",
+    "epochs = np.arange(5)+1\n",
+    "plt.figure(figsize=(20,5))\n",
+    "plt.subplot(121)\n",
+    "plt.title('Loss value over increasing epochs')\n",
+    "plt.plot(epochs, losses, label='Training Loss')\n",
+    "plt.legend()\n",
+    "plt.subplot(122)\n",
+    "plt.title('Accuracy value over increasing epochs')\n",
+    "plt.plot(epochs, accuracies, label='Training Accuracy')\n",
+    "plt.gca().set_yticklabels(['{:.0f}%'.format(x*100) \\\n",
+    "                           for x in plt.gca().get_yticks()]) \n",
+    "plt.legend()"
    ]
   },
   {
