calculating val loss;

--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +250,8 @@
     "    prediction = model(x)\n",
     "    batch_loss = loss_fn(prediction, y)\n",
     "    batch_loss.backward()\n",
-    "    optimizer.step()\n",
-    "    optimizer.zero_grad()\n",
+    "    opt.step()\n",
+    "    opt.zero_grad()\n",
     "    return batch_loss.item()\n",
     "\n",
     "def accuracy(x, y, model):\n",
@@ -279,6 +279,20 @@
     "    val_dl = DataLoader(val, batch_size=len(val_images), \n",
     "                                            shuffle=False)\n",
     "    return trn_dl, val_dl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def val_loss(x, y, model):\n",
+    "    model.eval()\n",
+    "    prediction = model(x)\n",
+    "    val_loss = loss_fn(prediction, y)\n",
+    "    return val_loss.item()"
    ]
   },
   {
