added new models

--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -300,7 +300,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trn_dl, val_dl = get_data()\n",
+    "model, loss_fn, optimizer = get_model()\n",
+    "train_losses, train_accuracies = [], []\n",
+    "val_losses, val_accuracies = [], []\n",
+    "for epoch in range(5):\n",
+    "    print(epoch)\n",
+    "    train_epoch_losses, train_epoch_accuracies = [], []\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        batch_loss = train_batch(x, y, model, optimizer, \\\n",
+    "                                                loss_fn)\n",
+    "        train_epoch_losses.append(batch_loss) \n",
+    "    train_epoch_loss = np.array(train_epoch_losses).mean()\n",
+    "\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        is_correct = accuracy(x, y, model)\n",
+    "        train_epoch_accuracies.extend(is_correct)\n",
+    "    train_epoch_accuracy = np.mean(train_epoch_accuracies)\n",
+    "    for ix, batch in enumerate(iter(val_dl)):\n",
+    "        x, y = batch\n",
+    "        val_is_correct = accuracy(x, y, model)\n",
+    "        validation_loss = val_loss(x, y, model)\n",
+    "    val_epoch_accuracy = np.mean(val_is_correct)\n"
+   ]
   }
  ],
  "metadata": {
