added new models

--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -297,9 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "trn_dl, val_dl = get_data()\n",
     "model, loss_fn, optimizer = get_model()\n",
@@ -324,7 +332,42 @@
     "        x, y = batch\n",
     "        val_is_correct = accuracy(x, y, model)\n",
     "        validation_loss = val_loss(x, y, model)\n",
-    "    val_epoch_accuracy = np.mean(val_is_correct)\n"
+    "    val_epoch_accuracy = np.mean(val_is_correct)\n",
+    "    train_losses.append(train_epoch_loss)\n",
+    "    train_accuracies.append(train_epoch_accuracy)\n",
+    "    val_losses.append(validation_loss)\n",
+    "    val_accuracies.append(val_epoch_accuracy)\n",
+    "epochs = np.arange(5)+1\n",
+    "import matplotlib.ticker as mtick\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mticker\n",
+    "%matplotlib inline\n",
+    "plt.subplot(211)\n",
+    "plt.plot(epochs, train_losses, 'bo', label='Training loss')\n",
+    "plt.plot(epochs, val_losses, 'r', label='Validation loss')\n",
+    "plt.gca().xaxis.set_major_locator(mticker.MultipleLocator(1))\n",
+    "plt.title('Training and validation loss \\\n",
+    "when batch size is 32')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.grid('off')\n",
+    "plt.show()\n",
+    "plt.subplot(212)\n",
+    "plt.plot(epochs, train_accuracies, 'bo', \\\n",
+    "         label='Training accuracy')\n",
+    "plt.plot(epochs, val_accuracies, 'r', \\\n",
+    "         label='Validation accuracy')\n",
+    "plt.gca().xaxis.set_major_locator(mticker.MultipleLocator(1))\n",
+    "plt.title('Training and validation accuracy \\\n",
+    "when batch size is 32')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.gca().set_yticklabels(['{:.0f}%'.format(x*100) \\\n",
+    "                           for x in plt.gca().get_yticks()]) \n",
+    "plt.legend()\n",
+    "plt.grid('off')\n",
+    "plt.show()"
    ]
   }
  ],
