--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -401,6 +401,28 @@
     "plt.grid('off')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data(): \n",
+    "    train = FMNISTDataset(tr_images, tr_targets) \n",
+    "    trn_dl = DataLoader(train, batch_size=10000, shuffle=True)\n",
+    "    val = FMNISTDataset(val_images, val_targets) \n",
+    "    val_dl = DataLoader(val, batch_size=len(val_images), \\\n",
+    "                                                shuffle=False)\n",
+    "    return trn_dl, val_dl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
