added new models

--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -545,10 +545,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_losses, train_accuracies = [], []\n",
+    "val_losses, val_accuracies = [], []\n",
+    "for epoch in range(10):\n",
+    "    train_epoch_losses, train_epoch_accuracies = [], []\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        batch_loss = train_batch(x, y, model, optimizer, \\\n",
+    "                                                loss_fn)\n",
+    "        train_epoch_losses.append(batch_loss) \n",
+    "    train_epoch_loss = np.array(train_epoch_losses).mean()\n",
+    "\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        is_correct = accuracy(x, y, model)\n",
+    "        train_epoch_accuracies.extend(is_correct)\n",
+    "    train_epoch_accuracy = np.mean(train_epoch_accuracies)\n",
+    "\n",
+    "    for ix, batch in enumerate(iter(val_dl)):\n",
+    "        x, y = batch\n",
+    "        val_is_correct = accuracy(x, y, model)\n",
+    "        validation_loss = val_loss(x, y, model)\n",
+    "    val_epoch_accuracy = np.mean(val_is_correct)\n",
+    "\n",
+    "    train_losses.append(train_epoch_loss)\n",
+    "    train_accuracies.append(train_epoch_accuracy)\n",
+    "    val_losses.append(validation_loss)\n",
+    "    val_accuracies.append(val_epoch_accuracy)\n",
+    "epochs = np.arange(10)+1\n",
+    "import matplotlib.ticker as mtick\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mticker\n",
+    "%matplotlib inline\n",
+    "plt.subplot(211)\n",
+    "plt.plot(epochs, train_losses, 'bo', label='Training loss')\n",
+    "plt.plot(epochs, val_losses, 'r', label='Validation loss')\n",
+    "plt.gca().xaxis.set_major_locator(mticker.MultipleLocator(1))\n",
+    "plt.title('Training and validation loss \\\n",
+    "when batch size is 32')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.grid('off')\n",
+    "plt.show()\n",
+    "plt.subplot(212)\n",
+    "plt.plot(epochs, train_accuracies, 'bo', \\\n",
+    "         label='Training accuracy')\n",
+    "plt.plot(epochs, val_accuracies, 'r', \\\n",
+    "         label='Validation accuracy')\n",
+    "plt.gca().xaxis.set_major_locator(mticker.MultipleLocator(1))\n",
+    "plt.title('Training and validation accuracy \\\n",
+    "when batch size is 32')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.gca().set_yticklabels(['{:.0f}%'.format(x*100) \\\n",
+    "                           for x in plt.gca().get_yticks()]) \n",
+    "plt.legend()\n",
+    "plt.grid('off')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
