--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -708,6 +708,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FMNISTDataset(Dataset):\n",
+    "    def __init__(self, x, y):\n",
+    "        x = x.float()/(255*10000) # Done only for us to \n",
+    "        # understand the impact of Batch normalization\n",
+    "        x = x.view(-1,28*28)\n",
+    "        self.x, self.y = x, y \n",
+    "    def __getitem__(self, ix):\n",
+    "        x, y = self.x[ix], self.y[ix] \n",
+    "        return x.to(device), y.to(device)\n",
+    "    def __len__(self): \n",
+    "        return len(self.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model():\n",
+    "    class neuralnet(nn.Module):\n",
+    "        def __init__(self):\n",
+    "            super().__init__()\n",
+    "            self.input_to_hidden_layer = nn.Linear(784,1000)\n",
+    "            self.hidden_layer_activation = nn.ReLU()\n",
+    "            self.hidden_to_output_layer = nn.Linear(1000,10)\n",
+    "        def forward(self, x):\n",
+    "            x = self.input_to_hidden_layer(x)\n",
+    "            x1 = self.hidden_layer_activation(x)\n",
+    "            x2= self.hidden_to_output_layer(x1)\n",
+    "            return x2, x1\n",
+    "    model = neuralnet().to(device)\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    optimizer = Adam(model.parameters(), lr=1e-3)\n",
+    "    return model, loss_fn, optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
