added new models

--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -750,6 +750,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In the preceding code, we defined the neuralnet class, which returns the output layer values (x2) and the hidden layer's activation values (x1). Note that the architecture of the network hasn't changed.\n",
+    "\n",
+    "### Given that the get_model function returns two outputs now, we need to modify the train_batch and val_loss functions, which make predictions, by passing input through the model. Here, we'll only fetch the output layer values, not the hidden layer values. Given that the output layer values are in the 0th index of what is returned from the model, we'll modify the functions so that they only fetch the 0th index of predictions, as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
