--- a/Pytorch/chapter-2.ipynb
+++ b/Pytorch/chapter-2.ipynb
@@ -760,6 +760,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_batch(x, y, model, opt, loss_fn):\n",
+    "    model.train()\n",
+    "    prediction = model(x)[0]\n",
+    "    batch_loss = loss_fn(prediction, y)\n",
+    "    batch_loss.backward()\n",
+    "    opt.step()\n",
+    "    opt.zero_grad()\n",
+    "    return batch_loss.item()\n",
+    "\n",
+    "def accuracy(x, y, model):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        prediction = model(x)[0]\n",
+    "    max_values, argmaxes = prediction.max(-1)\n",
+    "    is_correct = argmaxes == y\n",
+    "    return is_correct.cpu().numpy().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
