added new models

--- a/Deep-Learning/CNN.ipynb
+++ b/Deep-Learning/CNN.ipynb
@@ -80,6 +80,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Convolution\n",
+    "\n",
+    "### A convolution is basically multiplication between two matrices. As you saw in the previous chapter, matrix multiplication is a key ingredient of training a neural network. (We perform matrix multiplication when we calculate hidden layer values – which is a matrix multiplication of the input values and weight values connecting the input to the hidden layer. Similarly, we perform matrix multiplication to calculate output layer values.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
