added new models;

--- a/Deep-Learning/CNN.ipynb
+++ b/Deep-Learning/CNN.ipynb
@@ -89,6 +89,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Filter\n",
+    "### A filter is a matrix of weights that is initialized randomly at the start. The model learns the optimal weight values of a filter over increasing epochs.\n",
+    "\n",
+    "### The concept of filters brings us to two different aspects:\n",
+    "\n",
+    "- What the filters learn about\n",
+    "- How filters are represented\n",
+    "\n",
+    "### In general, the more filters there are in a CNN, the more features of an image that the model can learn about. We will learn about what various filters learn in the Visualizing the filters' learning section of this chapter. For now, we'll ensure that we have an intermediate understanding that the filters learn about different features present in the image. For example, a certain filter might learn about the ears of a cat and provide high activation (a matrix multiplication value) when the part of the image it is convolving with contains the ear of a cat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
