--- a/Deep-Learning/CNN.ipynb
+++ b/Deep-Learning/CNN.ipynb
@@ -104,6 +104,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## How convolution and pooling help in image translation\n",
+    "\n",
+    "### When we perform pooling, we can consider the output of the operation as an abstraction of a region (a small patch). This phenomenon comes in handy, especially when images are being translated.\n",
+    "\n",
+    "### Think of a scenario where an image is translated by 1 pixel to the left. Once we perform convolution, activation, and pooling on top of it, we'll have reduced the dimension of the image (due to pooling), which means that a fewer number of pixels store the majority of the information from the original image. Moreover, given that pooling stores information of a region (patch), the information within a pixel of the pooled image would not vary, even if the original image is translated by 1 unit. This is because the maximum value of that region is likely to get captured in the pooled image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
