--- a/Deep-Learning/CNN.ipynb
+++ b/Deep-Learning/CNN.ipynb
@@ -117,6 +117,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### CNN constitutes -> convolution -> pooling -> flattening -> and then the final classification layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
