added new notes

--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -33,10 +33,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model():\n",
+    "    model = nn.Sequential(\n",
+    "                nn.Conv2d(1, 1, kernel_size=3),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Flatten(),\n",
+    "                nn.Linear(1, 1),\n",
+    "                nn.Sigmoid(),\n",
+    "            ).to(device)\n",
+    "    loss_fn = nn.BCELoss()\n",
+    "    optimizer = Adam(model.parameters(), lr=1e-3)\n",
+    "    return model, loss_fn, optimizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note that in the preceding model, we are specifying that there is 1 channel in the input and that we are extracting 1 channel from the output post convolution (that is, we have 1 filter with a size of 3 x 3) using the nn.Conv2d method. After this, we perform max pooling using nn.MaxPool2d and ReLU activation (using nn.Relu()) prior to flattening and connecting to the final layer, which has one output per data point."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
