added train batch function

--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -60,12 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "def train_batch(x, y, model, opt, loss_fn):\n",
+    "    model.train()\n",
+    "    prediction = model(x)\n",
+    "    batch_loss = loss_fn(prediction.squeeze(0), y)\n",
+    "    batch_loss.backward()\n",
+    "    opt.step()\n",
+    "    opt.zero_grad()\n",
+    "    return batch_loss.item()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
