--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -76,6 +76,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trn_dl = DataLoader(TensorDataset(X_train, y_train))\n",
+    "model, loss_fn, optimizer = get_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(2000):\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        batch_loss = train_batch(x, y, model, optimizer, loss_fn)\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2004]], grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(X_train[:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
