--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -119,6 +119,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import datasets\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "data_folder = '~/data/FMNIST' # This can be any directory you \n",
+    "# want to download FMNIST to\n",
+    "fmnist = datasets.FashionMNIST(data_folder, download=True, \\\n",
+    "                                        train=True)\n",
+    "tr_images = fmnist.data\n",
+    "tr_targets = fmnist.targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FMNISTDataset(Dataset):\n",
+    "    def __init__(self, x, y):\n",
+    "        x = x.float()/255\n",
+    "        x = x.view(-1,1,28,28)\n",
+    "        self.x, self.y = x, y \n",
+    "    def __getitem__(self, ix):\n",
+    "        x, y = self.x[ix], self.y[ix] \n",
+    "        return x.to(device), y.to(device)\n",
+    "    def __len__(self): \n",
+    "        return len(self.x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The preceding line of code in bold is where we are reshaping each input image (differently to what we did in the previous chapter) since we are providing data to a CNN that expects each input to have a shape of batch size x channels x height x width."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
