--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -167,6 +167,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.optim import SGD, Adam\n",
+    "def get_model():\n",
+    "    model = nn.Sequential(\n",
+    "                nn.Conv2d(1, 64, kernel_size=3),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Conv2d(64, 128, kernel_size=3),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Flatten(),\n",
+    "                nn.Linear(3200, 256),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Linear(256, 10)\n",
+    "            ).to(device)\n",
+    "\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    optimizer = Adam(model.parameters(), lr=1e-3)\n",
+    "    return model, loss_fn, optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, loss_fn, optimizer = get_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To solidify our understanding of CNNs, let's understand the reason why the number of parameters have been set the way they have in the preceding output:\n",
+    "\n",
+    "- Layer 1: Given that there are 64 filters with a kernel size of 3, we have 64 x 3 x 3 weights and 64 x 1 biases, resulting in a total of 640 parameters.\n",
+    "- Layer 4: Given that there are 128 filters with a kernel size of 3, we have 128 x 64 x3 x 3 weights and 128 x 1 biases, resulting in a total of 73,856 parameters.\n",
+    "- Layer 8: Given that a layer with 3,200 nodes is getting connected to another layer with 256 nodes, we have a total of 3,200 x 256 weights + 256 biases, resulting in a total of 819,456 parameters.\n",
+    "- Layer 10: Given that a layer with 256 nodes is getting connected to a layer with 10 nodes, we have a total of 256 x 10 weights and 10 biases, resulting in a total of 2,570 parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
