added new models

--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -381,6 +381,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import datasets\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "data_folder = '~/data/FMNIST' # This can be any directory \n",
+    "# you want to download FMNIST to\n",
+    "fmnist = datasets.FashionMNIST(data_folder, download=True, \\\n",
+    "                                        train=True)\n",
+    "tr_images = fmnist.data\n",
+    "tr_targets = fmnist.targets\n",
+    "val_fmnist=datasets.FashionMNIST(data_folder, download=True, \\\n",
+    "                                        train=False)\n",
+    "val_images = val_fmnist.data\n",
+    "val_targets = val_fmnist.targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imgaug import augmenters as iaa\n",
+    "aug = iaa.Sequential([\n",
+    "              iaa.Affine(translate_px={'x':(-10,10)}, \n",
+    "                                        mode='constant'),\n",
+    "            ])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
