added new notes

--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -422,10 +422,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class FMNISTDataset(Dataset):\n",
+    "    def __init__(self, x, y, aug=None):\n",
+    "        self.x, self.y = x, y\n",
+    "        self.aug = aug\n",
+    "    def __getitem__(self, ix):\n",
+    "        x, y = self.x[ix], self.y[ix]\n",
+    "        return x, y\n",
+    "    def __len__(self): return len(self.x)\n",
+    "    def collate_fn(self, batch):\n",
+    "        'logic to modify a batch of images'\n",
+    "        ims, classes = list(zip(*batch))\n",
+    "        # transform a batch of images at once\n",
+    "        if self.aug: ims=self.aug.augment_images(images=ims) \n",
+    "        ims = torch.tensor(ims)[:,None,:,:].to(device)/255.\n",
+    "        classes = torch.tensor(classes).to(device)\n",
+    "        return ims, classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.optim import SGD, Adam\n",
+    "def get_model():\n",
+    "    model = nn.Sequential(\n",
+    "                nn.Conv2d(1, 64, kernel_size=3),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Conv2d(64, 128, kernel_size=3),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Flatten(),\n",
+    "                nn.Linear(3200, 256),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Linear(256, 10)\n",
+    "            ).to(device)\n",
+    "\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    optimizer = Adam(model.parameters(), lr=1e-3)\n",
+    "    return model, loss_fn, optimizer"
+   ]
   }
  ],
  "metadata": {
