--- a/Pytorch/CNN-Torch.ipynb
+++ b/Pytorch/CNN-Torch.ipynb
@@ -469,6 +469,127 @@
     "    optimizer = Adam(model.parameters(), lr=1e-3)\n",
     "    return model, loss_fn, optimizer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_batch(x, y, model, opt, loss_fn):\n",
+    "    model.train()\n",
+    "    prediction = model(x)\n",
+    "    batch_loss = loss_fn(prediction, y)\n",
+    "    batch_loss.backward()\n",
+    "    optimizer.step()\n",
+    "    optimizer.zero_grad()\n",
+    "    return batch_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data(): \n",
+    "    train = FMNISTDataset(tr_images, tr_targets, aug=aug)\n",
+    "    'notice the collate_fn argument'\n",
+    "    trn_dl = DataLoader(train, batch_size=64, \\\n",
+    "                collate_fn=train.collate_fn, shuffle=True)\n",
+    "    val = FMNISTDataset(val_images, val_targets) \n",
+    "    val_dl = DataLoader(val, batch_size=len(val_images), \n",
+    "                collate_fn=val.collate_fn, shuffle=True)\n",
+    "    return trn_dl, val_dl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trn_dl, val_dl = get_data()\n",
+    "model, loss_fn, optimizer = get_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision\n",
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision import transforms,models,datasets\n",
+    "from PIL import Image\n",
+    "from torch import optim\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "import cv2, glob, numpy as np, pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_path = \"/Users/maukanmir/Downloads/Archive/training_set\"\n",
+    "test_path = \"/Users/maukanmir/Downloads/Archive/test_set\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "class cats_dogs(Dataset):\n",
+    "  def __init__(self, folder):\n",
+    "    cats = glob(folder+'/cats/*.jpg')\n",
+    "    dogs = glob(folder+'/dogs/*.jpg')\n",
+    "    self.fpaths = cats + dogs\n",
+    "    from random import shuffle, seed; seed(10); shuffle(self.fpaths)\n",
+    "    self.targets = [fpath.split('/')[-1].startswith('dog') for fpath in self.fpaths] # dog=1 & cat=0\n",
+    "  def __len__(self): return len(self.fpaths)\n",
+    "  def __getitem__(self, ix):\n",
+    "    f = self.fpaths[ix]\n",
+    "    target = self.targets[ix]\n",
+    "    im = (cv2.imread(f)[:,:,::-1])\n",
+    "    im = cv2.resize(im, (224,224))\n",
+    "    return torch.tensor(im/255).permute(2,0,1).to(device).float(), torch.tensor([target]).float().to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m cats_dogs(training_path)\n\u001b[0;32m----> 2\u001b[0m im, label \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m200\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "Cell \u001b[0;32mIn[29], line 11\u001b[0m, in \u001b[0;36mcats_dogs.__getitem__\u001b[0;34m(self, ix)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, ix):\n\u001b[0;32m---> 11\u001b[0m   f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfpaths\u001b[49m\u001b[43m[\u001b[49m\u001b[43mix\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     12\u001b[0m   target \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtargets[ix]\n\u001b[1;32m     13\u001b[0m   im \u001b[38;5;241m=\u001b[39m (cv2\u001b[38;5;241m.\u001b[39mimread(f)[:,:,::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = cats_dogs(training_path)\n",
+    "im, label = data[200]"
+   ]
   }
  ],
  "metadata": {
