--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -23,6 +23,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /Users/maukanmir/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
+      "100%|██████████| 528M/528M [00:10<00:00, 51.4MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = models.vgg16(pretrained=True).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
