added new vgg model

--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -197,7 +197,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def train_batch(x, y, model, opt, loss_fn):\n",
     "    model.train()\n",
     "    prediction = model(x)\n",
@@ -206,7 +205,6 @@
     "    optimizer.step()\n",
     "    optimizer.zero_grad()\n",
     "    return batch_loss.item()\n",
-    "\n",
     "\n",
     "@torch.no_grad()\n",
     "def accuracy(x, y, model):\n",
@@ -225,9 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "trn_dl, val_dl = get_data()\n",
     "model, loss_fn, optimizer = get_model()"
