added new models

--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -241,6 +241,70 @@
     "trn_dl, val_dl = get_data()\n",
     "model, loss_fn, optimizer = get_model()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " epoch 1/5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train_losses, train_accuracies = [], []\n",
+    "val_accuracies = []\n",
+    "for epoch in range(5):\n",
+    "    print(f\" epoch {epoch + 1}/5\")\n",
+    "    train_epoch_losses, train_epoch_accuracies = [], []\n",
+    "    val_epoch_accuracies = []\n",
+    "\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        batch_loss = train_batch(x, y, model, optimizer, loss_fn)\n",
+    "        train_epoch_losses.append(batch_loss) \n",
+    "    train_epoch_loss = np.array(train_epoch_losses).mean()\n",
+    "\n",
+    "    for ix, batch in enumerate(iter(trn_dl)):\n",
+    "        x, y = batch\n",
+    "        is_correct = accuracy(x, y, model)\n",
+    "        train_epoch_accuracies.extend(is_correct)\n",
+    "    train_epoch_accuracy = np.mean(train_epoch_accuracies)\n",
+    "\n",
+    "    for ix, batch in enumerate(iter(val_dl)):\n",
+    "        x, y = batch\n",
+    "        val_is_correct = accuracy(x, y, model)\n",
+    "        val_epoch_accuracies.extend(val_is_correct)\n",
+    "    val_epoch_accuracy = np.mean(val_epoch_accuracies)\n",
+    "\n",
+    "    train_losses.append(train_epoch_loss)\n",
+    "    train_accuracies.append(train_epoch_accuracy)\n",
+    "    val_accuracies.append(val_epoch_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding ResNet architecture\n",
+    "\n",
+    "### While building too deep a network, there are two problems. In forward propagation, the last few layers of the network have almost no information about what the original image was. In backpropagation, the first few layers near the input hardly get any gradient updates due to vanishing gradients (in other words, they are almost zero). To solve both problems, residual networks (ResNet) use a highway-like connection that transfers raw information from the previous few layers to the later layers. In theory, even the last layer will have the entire information of the original image due to this highway network. And because of the skipping layers, the backward gradients will flow freely to the initial layers with little modification.\n",
+    "\n",
+    "### The term residual in the residual network is the additional information that the model is expected to learn from the previous layer that needs to be passed on to the next layer.\n",
+    "\n",
+    "### As you can see, while so far, we have been interested in extracting the F(x) value, where x is the value coming from the previous layer, in the case of a residual network, we are extracting not only the value after passing through the weight layers, which is F(x), but are also summing up F(x) with the original value, which is x.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
