--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -251,7 +251,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " epoch 1/5\n"
+      " epoch 1/5\n",
+      " epoch 2/5\n",
+      " epoch 3/5\n"
      ]
     }
    ],
