--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -253,7 +253,9 @@
      "text": [
       " epoch 1/5\n",
       " epoch 2/5\n",
-      " epoch 3/5\n"
+      " epoch 3/5\n",
+      " epoch 4/5\n",
+      " epoch 5/5\n"
      ]
     }
    ],
