added pipeline example

--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -308,7 +308,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Example of Image Pipeline in PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import transforms as T\n",
+    "\n",
+    "trn_tfms = T.Compose([\n",
+    "                T.ToPILImage(),\n",
+    "                T.Resize(128),\n",
+    "                T.CenterCrop(128),\n",
+    "                T.ColorJitter(brightness=(0.95,1.05), \n",
+    "                              contrast=(0.95,1.05), \n",
+    "                              saturation=(0.95,1.05), \n",
+    "                              hue=0.05),\n",
+    "                T.RandomAffine(5, translate=(0.01,0.1)),\n",
+    "                T.ToTensor(),\n",
+    "                T.Normalize(mean=[0.5, 0.5, 0.5], \n",
+    "                            std=[0.5, 0.5, 0.5]),\n",
+    "            ])"
+   ]
   }
  ],
  "metadata": {
