added new models

--- a/Pytorch/transfer-learning.ipynb
+++ b/Pytorch/transfer-learning.ipynb
@@ -343,9 +343,65 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "val_tfms = T.Compose([\n",
+    "                T.ToPILImage(),\n",
+    "                T.Resize(128),\n",
+    "                T.CenterCrop(128),\n",
+    "                T.ToTensor(),\n",
+    "                T.Normalize(mean=[0.5, 0.5, 0.5], \n",
+    "                            std=[0.5, 0.5, 0.5]),\n",
+    "            ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_snippets import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class MalariaImages(Dataset):\n",
+    "\n",
+    "    def __init__(self, files, transform=None):\n",
+    "        self.files = files\n",
+    "        self.transform = transform\n",
+    "        logger.info(len(self))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.files)\n",
+    "\n",
+    "    def __getitem__(self, ix):\n",
+    "        fpath = self.files[ix]\n",
+    "        clss = fname(parent(fpath))\n",
+    "        img = read(fpath, 1)\n",
+    "        return img, clss\n",
+    "\n",
+    "    def choose(self):\n",
+    "        return self[randint(len(self))]\n",
+    "\n",
+    "    def collate_fn(self, batch):\n",
+    "        _imgs, classes = list(zip(*batch))\n",
+    "        if self.transform:\n",
+    "            imgs = [self.transform(img)[None] for img in _imgs]\n",
+    "        classes = [torch.tensor([id2int[clss]]) for clss in classes]\n",
+    "        imgs, classes = [torch.cat(i).to(device) for i in [imgs, classes]]\n",
+    "        return imgs, classes, _imgs\n",
+    "     \n"
+   ]
   }
  ],
  "metadata": {
