added new models

--- a/Pytorch/Object-Detection.ipynb
+++ b/Pytorch/Object-Detection.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Region proposal is a technique that helps in identifying islands of regions where the pixels are similar to one another."
+    "### Region proposal is a technique that helps in identifying islands of regions where the pixels are similar to one another.\n",
+    "\n",
+    "### A region proposal that has a high intersection with the location (ground truth) of an object in the image of interest is labeled as the one that contains the object, and a region proposal with a low intersection is labeled as background."
    ]
   },
   {
